[package]
name = "monero-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
# Error handling
anyhow = { workspace = true }
backoff = { workspace = true }

# Other stuff
monero = { workspace = true }
monero-sys = { path = "../monero-sys" }
swap-core = { path = "../swap-core" }
throttle = { path = "../throttle" }
time = "0.3"
uuid = { workspace = true }

# Tokio
tokio = { workspace = true, features = ["process", "fs", "net", "parking_lot", "rt"] }

# Tracing
tracing = { workspace = true }
tracing-appender = "0.2"
tracing-subscriber = { workspace = true }

# monero-oxide
monero-daemon-rpc = { workspace = true }
monero-oxide-wallet = { workspace = true }
monero-simple-request-rpc = { workspace = true }
monero-wallet-ng = { path = "../monero-wallet-ng" }

# Cryptography
curve25519-dalek = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }


[dev-dependencies]
data-encoding = { workspace = true }
mockito = "1.4"
monero-harness = { path = "../monero-harness" }
proptest = "1"
swap-p2p = { path = "../swap-p2p", features = ["test-support"] }
tempfile = "3"
testcontainers = "0.15"
serial_test = "3"
tracing-ext = { path = "../tracing-ext" }
rustls = { version = "0.23", features = ["ring"] }
rand = "0.8"


[build-dependencies]
anyhow = { workspace = true }
vergen-git2 = { workspace = true }
