[package]
name = "unstoppableswap-gui-rs"
version = "3.2.11"
authors = ["binarybaron", "einliterflasche", "unstoppableswap"]
edition = "2021"
description = "GUI for XMR<>BTC Atomic Swaps written in Rust"

[lib]
name = "unstoppableswap_gui_rs_lib"
crate-type = ["rlib", "staticlib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2.*", features = ["config-json5"] }

[dependencies]
monero-rpc-pool = { path = "../monero-rpc-pool" }
swap = { path = "../swap", features = [ "tauri" ] }
dfx-swiss-sdk = { workspace = true }

anyhow = "1"
rustls = { version = "0.23.26", default-features = false, features = ["ring"] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"

tracing = "0.1"
uuid = "1.16.0"
zip = "4.0.0"

# Tauri
tauri = { version = "2.*", features = [ "config-json5" ] }
tauri-plugin-clipboard-manager = "2.*"
tauri-plugin-dialog = "2.2.2"
tauri-plugin-opener = "2.*"
tauri-plugin-process = "2.*"
tauri-plugin-shell = "2.*"
tauri-plugin-store = "2.*"
tauri-plugin-updater = "2.*"

# Tokio
tokio = { workspace = true }
tokio-util = { workspace = true }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-cli = "2.*"
tauri-plugin-single-instance = "2.*"
