[package]
name = "unstoppableswap-gui-rs"
version = "4.5.0"
authors = ["binarybaron", "einliterflasche", "unstoppableswap"]
edition = "2024"
description = "GUI for XMR<>BTC Atomic Swaps written in Rust"

[lib]
name = "unstoppableswap_gui_rs_lib"
crate-type = ["rlib", "staticlib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2.*", features = ["config-json5"] }
toml = { workspace = true }

[dependencies]
swap = { path = "../swap", features = [ "tauri" ] }
swap-p2p = { path = "../swap-p2p" }
tor-socks5 = { workspace = true }
dfx-swiss-sdk = { workspace = true }
anyhow = { workspace = true }

rustls = { version = "0.23.26", default-features = false, features = ["ring"] }
reqwest = { workspace = true, features = ["rustls-tls-native-roots", "socks"] }
# Phantom dep: enable `socks` feature on reqwest 0.13 via Cargo feature unification
# so that tauri-plugin-updater can route through socks5h:// proxies.
# Without this, reqwest 0.13 rejects SOCKS URLs with "unknown proxy scheme".
# build.rs verifies this version still matches what tauri-plugin-updater uses.
reqwest13 = { package = "reqwest", version = "0.13", default-features = false, features = ["socks"] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"

tracing = "0.1"
url = { workspace = true }
zip = "4.0.0"

# Tauri
tauri = { version = "2.8.0", features = [ "config-json5" ] }
tauri-plugin-clipboard-manager = "2.*"
tauri-plugin-dialog = "2.3.3"
tauri-plugin-opener = "2.*"
tauri-plugin-process = "2.*"
tauri-plugin-store = "2.*"
tauri-plugin-updater = "2.*"

# Tokio
tokio = { workspace = true }
tokio-util = { workspace = true }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-cli = "2.*"
tauri-plugin-single-instance = "2.*"
