[package]
name = "swap-asb"
version = "4.0.0"
authors = ["The eigenwallet guys <hello@eigenwallet.org>", "The COMIT guys <hello@comit.network>"]
edition = "2021"
description = "ASB (Automated Swap Backend) binary for XMR/BTC atomic swaps."

[[bin]]
name = "asb"
path = "src/main.rs"

[dependencies]
# Core
anyhow = { workspace = true }
bitcoin = { workspace = true }
monero-address = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["serde"] }

# Workspace dependencies
bitcoin-wallet = { path = "../bitcoin-wallet" }
monero-rpc-pool = { path = "../monero-rpc-pool" }
monero-sys = { path = "../monero-sys" }
swap = { path = "../swap" }
swap-env = { path = "../swap-env" }
swap-feed = { path = "../swap-feed" }
swap-machine = { path = "../swap-machine" }
swap-serde = { path = "../swap-serde" }

# Async
tokio = { workspace = true, features = ["process", "fs", "net", "parking_lot", "rt"] }
tracing = { workspace = true }

comfy-table = "7.1"
libp2p = { workspace = true, features = ["tcp", "yamux", "dns", "noise", "request-response", "ping", "rendezvous", "identify", "macros", "cbor", "json", "tokio", "serde", "rsa"] }
reqwest = { workspace = true, features = ["http2", "rustls-tls-native-roots", "stream", "socks"] }
rust_decimal = { workspace = true, features = ["serde-float"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde_json = { workspace = true }
structopt = "0.3"

[build-dependencies]
anyhow = { workspace = true }
vergen = { workspace = true }
