[package]
name = "swap-controller-api"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { workspace = true }
jsonrpsee = { workspace = true, features = ["macros", "server", "client-core", "http-client"] }
serde = { workspace = true }
monero = { workspace = true }
swap-serde = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
