[package]
name = "swap-controller-api"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { workspace = true }
jsonrpsee = { workspace = true, features = ["macros", "server", "client-core", "http-client"] }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
