[package]
name = "swap-controller-api"
version = "4.0.0"
edition = "2021"

[dependencies]
bitcoin = { workspace = true }
jsonrpsee = { workspace = true, features = ["macros", "server", "client-core", "http-client"] }
serde = { workspace = true }
uuid = { workspace = true, features = ["serde"] }

[lints]
workspace = true
