[package]
name = "swap-controller"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "asb-controller"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
jsonrpsee = { workspace = true, features = ["client-core", "http-client"] }
monero = { workspace = true }
rustyline = "17.0.0"
serde_json = { workspace = true }
shell-words = "1.1"
swap-controller-api = { path = "../swap-controller-api" }
tokio = { workspace = true }

[lints]
workspace = true
