[package]
name = "swap-controller"
version = "3.3.2"
edition = "2021"

[[bin]]
name = "asb-controller"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
jsonrpsee = { workspace = true, features = ["client-core", "http-client"] }
monero = { workspace = true }
rustyline = "17.0.0"
shell-words = "1.1"
swap-controller-api = { path = "../swap-controller-api" }
tokio = { workspace = true }

[lints]
workspace = true
