[package]
name = "swap-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }

# Bitcoin stuff
bdk_electrum = { workspace = true }
bdk_wallet = { workspace = true, features = ["rusqlite", "test-utils"] }
bitcoin = { workspace = true }
bitcoin-wallet = { path = "../bitcoin-wallet" }
curve25519-dalek = { workspace = true }
ecdsa_fun = { workspace = true }
electrum-pool = { path = "../electrum-pool" }
monero = { workspace = true }
sha2 = { workspace = true }

# Serialization
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
swap-serde = { path = "../swap-serde" }
typeshare = { workspace = true }

# Tracing
tracing = { workspace = true }

# Errors
thiserror = { workspace = true }

# Randomness
rand = { workspace = true }
rand_chacha = { workspace = true }

# Async runtime
tokio = { workspace = true }

[dev-dependencies]
serde_cbor = { workspace = true }
swap-env = { path = "../swap-env" }
uuid = { workspace = true }

[lints]
workspace = true
